maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:36: error: value gauche is not a member of Nothing
{if (estSurBiscuit()){return()}gauche();
                               ^